# drgn

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  changelog.md  package-lock.json  package.json  readme.md  release.json  tsconfig.json  turbo.json  webpack.main.config.js  webpack.plugins.js  webpack.rules.js
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  test.yml  update.yml
guide/: hosters.md
public/: index.html
scripts/: build.mjs  bumpVersion.js  createUpdate.js  setVersion.js  update.js
src/: App.tsx  app.module.sass  app.module.scss  config.json  index.html  index.sass  index.scss  index.ts  index.tsx  main.ts  package.json  renderer.tsx  theme.scss  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: index.ts
src/assets/: icon.icns
src/components/: Avatar.tsx  Base.tsx  FileIcon.tsx  Icon.tsx  Navigation.tsx  OuterNavigation.tsx  Popup.tsx  Portal.tsx  ReadableDate.tsx  Tip.tsx
src/components/Animate/: index.tsx  styles.module.sass  styles.module.scss
src/components/AppNavigation/: index.tsx  styles.module.sass  styles.module.scss
src/contexts/: UserContext.ts
src/core/: logger.ts  updater.ts
src/modules/: cache.ts  fetch.ts  readableSize.ts
src/pages/: Deploy.tsx  Register.tsx  deploy.tsx  files.tsx  index.tsx
src/styles/: App.module.scss  Base.module.scss  Files.module.scss  Navigation.module.scss  OuterNavigation.module.scss  Popup.module.scss  _global.scss  _theme.scss  global.scss  test.module.css  test.module.scss  theme.scss
(+12 files in other folders)
