[package]
name = "drgn"
version = "0.1.0"
description = "A modern SSH client built with web technologies."
authors = ["Samuel Kopp"]
default-run = "drgn"
edition = "2021"
rust-version = "1.61"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.15", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all", "updater"] }
window-shadows = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
